--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Capsules</a>
+                    <a href="html/capsules_page.html" class="nav-link">Capsules</a>
                 </li>
             </ul>
             <ul class="navbar-nav">
