--- a/html/missions_page.html
+++ b/html/missions_page.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="../css/main.css">
     <title>SpaceX | Missions</title>
 </head>
 <body>
 
     <nav class="navbar navbar-expend-lg navbar-light bg-light">
-        <a class='navbar-brand' href="#">SpaceX fan site</a>
+        <a class='navbar-brand' href="#">
+          SpaceX | FAN SITE
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle naviagtion">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -80,6 +82,7 @@
 
         <div class="card-deck">
             <div class="card">
+              <img src="../img/Thaicom.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title" id="missionName0"></h5>
                 <small class="text-muted" id='missionId0'></small>
@@ -95,6 +98,7 @@
             </div>
 
             <div class="card">
+              <img src="../img/Telstar_19V.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title" id="missionName1"></h5>
                 <small class="text-muted" id='missionId1'></small>
@@ -111,6 +115,7 @@
             </div>
 
             <div class="card">
+              <img src="../img/Iridium_NEXT.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title" id="missionName2"></h5>
                 <small class="text-muted" id='missionId2'></small>
@@ -130,6 +135,7 @@
         <br>
         <div class="card-deck">
             <div class="card">
+              <img src="../img/SpaceX_CRS-10.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title" id="missionName3"></h5>
                 <small class="text-muted" id='missionId3'></small>
@@ -145,6 +151,7 @@
             </div>
 
             <div class="card">
+              <img src="../img/SES.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title" id="missionName4"></h5>
                 <small class="text-muted" id='missionId4'></small>
@@ -160,6 +167,7 @@
             </div>
 
             <div class="card">
+              <img src="../img/JCSAT-14_patch.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title" id="missionName5"></h5>
                 <small class="text-muted" id='missionId5'></small>
@@ -178,6 +186,7 @@
         <br>
         <div class="card-deck">
             <div class="card">
+              <img src="../img/AsiaSat_6.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title" id="missionName6"></h5>
                 <small class="text-muted" id='missionId6'></small>
@@ -193,6 +202,7 @@
             </div>
 
             <div class="card">
+              <img src="../img/Orbcomm-2.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title" id="missionName7"></h5>
                 <small class="text-muted" id='missionId7'></small>
@@ -208,6 +218,7 @@
             </div>
 
             <div class="card">
+              <img src="../img/ABS-2A.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title" id="missionName8"></h5>
                 <small class="text-muted" id='missionId8'></small>
@@ -248,7 +259,7 @@
     </div>
     
     
-    <script src="../js/spacex.js"></script>
+    <script src="../js/missions.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
