Work with elements, created by pug

--- a/html/header.html
+++ b/html/header.html
@@ -1,39 +1,9 @@
 
-<nav class="navbar navbar-expend-lg navbar-dark bg-dark"><a class="navbar-brand" href="">SpaceX | FAN SITE</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-  <div class="collape navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item"><a class="nav-link" href="html/capsules_page.html">Capsules</a></li>
-    </ul>
-    <ul class="navbar-nav">
-      <li class="nav-item"><a class="nav-link" href="#">Cores</a></li>
-    </ul>
-    <ul class="navbar-nav">
-      <li class="nav-item"><a class="nav-link" href="#">Dragons</a></li>
-    </ul>
-    <ul class="navbar-nav">
-      <li class="nav-item"><a class="nav-link" href="#">History</a></li>
-    </ul>
-    <ul class="navbar-nav">
-      <li class="nav-item"><a class="nav-link" href="#">Info</a></li>
-    </ul>
-    <ul class="navbar-nav">
-      <li class="nav-item"><a class="nav-link" href="#">Landing pads</a></li>
-    </ul>
-    <ul class="navbar-nav">
-      <li class="nav-item"><a class="nav-link" href="html/missions_page.html">Missions</a></li>
-    </ul>
-    <ul class="navbar-nav">
-      <li class="nav-item"><a class="nav-link" href="#">Payloads</a></li>
-    </ul>
-    <ul class="navbar-nav">
-      <li class="nav-item"><a class="nav-link" href="#">Rockets</a></li>
-    </ul>
-    <ul class="navbar-nav">
-      <li class="nav-item"><a class="nav-link" href="#">Roadster</a></li>
-    </ul>
-    <ul class="navbar-nav">
-      <li class="nav-item"><a class="nav-link" href="#">Ships      </a></li>
-    </ul>
+<header class="masthead" style="background-image:url(&quot;../img/main-bg-3.webp&quot;);">
+  <div class="container">
+    <div class="intro-text">
+      <div class="intro-lead-in"><span>SpaceX Fan Site</span></div>
+      <div class="intro-heading text-uppercase"><span>Explore all about spaceadventures</span></div><a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" role="button" href="#">Let's go</a>
+    </div>
   </div>
-</nav>
+</header>
