--- a/html/capsules_page.html
+++ b/html/capsules_page.html
@@ -1,17 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"/>
     <title>SpaceX | Capsules</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-</head>
-<body>
-    
-    <script src="../js/capsules.js"></script>
+  </head>
+  <body>
+    <header class="masthead" style="background-image:url(&quot;../img/main-bg-3.webp&quot;);">
+      <div class="container">
+        <div class="intro-text">
+          <div class="intro-lead-in"><span>SpaceX Fan Site</span></div>
+          <div class="intro-heading text-uppercase"><span>Explore all about spaceadventures</span></div><a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" role="button" href="#">Let's go</a>
+        </div>
+      </div>
+    </header><br/>
+    <div class="card-deck">
+      <div class="card"><img class="card-img-top" src="../img/Thaicom.png" alt="Thaicom"/>
+        <div class="card-body">
+          <h5 class="card-title" id="missionName0"></h5><small class="text-muted" id="missionId0"></small>
+          <p class="card-text" id="missionDescr0"></p>
+        </div>
+        <div class="card-footer text-center"><small class="text-muted"><a class="card-link" href="" id="missionWeb0">Website</a><a class="card-link" href="" id="missionWiki0">Wiki</a><a class="card-link" href="" id="missionTwitter0">Twitter</a></small></div>
+      </div>
+      <div class="card"><img class="card-img-top" src="../img/Telstar_19V.png" alt="Telstar"/>
+        <div class="card-body">
+          <h5 class="card-title" id="missionName1"></h5><small class="text-muted" id="missionId1"></small>
+          <p class="card-text" id="missionDescr1"></p>
+        </div>
+        <div class="card-footer text-center"><small class="text-muted"><a class="card-link" href="" id="missionWeb1">Website</a><a class="card-link" href="" id="missionWiki1">Wiki</a><a class="card-link" href="" id="missionTwitter1">Twitter</a></small></div>
+      </div>
+      <div class="card"><img class="card-img-top" src="../img/Iridium_NEXT.png" alt="Iridium"/>
+        <div class="card-body">
+          <h5 class="card-title" id="missionName2"></h5><small class="text-muted" id="missionId2"></small>
+          <p class="card-text" id="missionDescr2"></p>
+        </div>
+        <div class="card-footer text-center"><small class="text-muted"><a class="card-link" href="" id="missionWeb2">Website</a><a class="card-link" href="" id="missionWiki2">Wiki</a><a class="card-link" href="" id="missionTwitter2">Twitter</a></small></div>
+      </div>
+      <div class="card"><img class="card-img-top" src="../img/Thaicom.png" alt="Thaicom"/>
+        <div class="card-body">
+          <h5 class="card-title" id="missionName0"></h5><small class="text-muted" id="missionId0"></small>
+          <p class="card-text" id="missionDescr0"></p>
+        </div>
+        <div class="card-footer text-center"><small class="text-muted"><a class="card-link" href="" id="missionWeb0">Website</a><a class="card-link" href="" id="missionWiki0">Wiki</a><a class="card-link" href="" id="missionTwitter0">Twitter</a></small></div>
+      </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-</body>
+  </body>
 </html>
