--- a/html/footer.html
+++ b/html/footer.html
@@ -1,5 +1,5 @@
 
-<div class="footer-copyright text-center py-e"> 
+<div class="footer-copyright text-center text-light py-e footer-dark bg-dark">
   <p>
     I don't own anything. All rights about SpaceX information goes to Ellon Mask and SpaceX. 
     I just have fun with API :) 
