--- a/html/index.html
+++ b/html/index.html
@@ -4,53 +4,141 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="../css/main.css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700"/>
     <title>SpaceX | FAN SITE</title>
   </head>
-  <body> 
-    <nav class="navbar navbar-expend-lg navbar-dark bg-dark"><a class="navbar-brand" href="">SpaceX | FAN SITE</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-      <div class="collape navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="html/capsules_page.html">Capsules</a></li>
-        </ul>
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="#">Cores</a></li>
-        </ul>
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="#">Dragons</a></li>
-        </ul>
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="#">History</a></li>
-        </ul>
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="#">Info</a></li>
-        </ul>
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="#">Landing pads</a></li>
-        </ul>
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="html/missions_page.html">Missions</a></li>
-        </ul>
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="#">Payloads</a></li>
-        </ul>
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="#">Rockets</a></li>
-        </ul>
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="#">Roadster</a></li>
-        </ul>
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="#">Ships      </a></li>
-        </ul>
+  <body>
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark">
+      <div class="container"><a class="navbar-brand" href="#page-top">SpaceX Fan</a>
+        <button class="navbar-toggler navbar-toggler-right" data-target="#navbarResponsive" data-toggle="collapse" type="button" aria-controls="navbarResponsive" aria-expended="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="nav navbar-nav ml-auto text-uppercase">
+            <li class="navitem" role="presentation"> <a class="nav-link js-scroll-trigger" href="#">About</a></li>
+            <li class="navitem" role="presentation"> <a class="nav-link js-scroll-trigger" href="#crew">Crew</a></li>
+            <li class="navitem" role="presentation"> <a class="nav-link js-scroll-trigger" href="#missions">Missions</a></li>
+            <li class="navitem" role="presentation"> <a class="nav-link js-scroll-trigger" href="#">Capsules</a></li>
+          </ul>
+        </div>
       </div>
     </nav>
-    <div class="footer-copyright text-center py-e"> 
-      <p>
-        I don't own anything. All rights about SpaceX information goes to Ellon Mask and SpaceX. 
-        I just have fun with API :) 
-      </p><a href="https://mdbootstrap.com/">MDBootstrap.com</a>
-    </div>
+    <header class="masthead" style="background-image:url(&quot;../img/main-bg-3.webp&quot;);">
+      <div class="container">
+        <div class="intro-text">
+          <div class="intro-lead-in"><span>SpaceX Fan Site</span></div>
+          <div class="intro-heading text-uppercase"><span>Explore all about spaceadventures</span></div><a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" role="button" href="#">Let's go</a>
+        </div>
+      </div>
+    </header>
+    <section id="crew">
+      <div class="container">
+        <div class="card-deck h-75 w-75 align-middle justify-content-center">
+          <div class="card bg-dark text-white"><img class="card-img-top" src="../img/Crew1.webp" alt="Crew member number 1"/>
+            <div class="card-body">
+              <h5 class="card-title" id="crew_member_name0"></h5>
+              <p class="card-text" id="crew_member_agency0"></p>
+              <p class="card-text"><small class="text-muted" id="crew_member_status0"></small></p>
+            </div>
+          </div>
+          <div class="card bg-dark text-white"><img class="card-img-top" src="../img/Crew2.webp" alt="Crew member number 2"/>
+            <div class="card-body">
+              <h5 class="card-title" id="crew_member_name1"></h5>
+              <p class="card-text" id="crew_member_agency1"></p>
+              <p class="card-text"><small class="text-muted" id="crew_member_status1"></small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="missions">
+      <div class="container"><br/>
+        <div class="card-deck">
+          <div class="card bg-dark text-white"><img class="card-img-top" src="../img/Thaicom.png" alt="Thaicom"/>
+            <div class="card-body">
+              <h5 class="card-title" id="missionName0"></h5><small class="text-muted" id="missionId0"></small>
+              <p class="card-text" id="missionDescr0"></p>
+            </div>
+            <div class="card-footer text-center"><small class="text-muted"><a class="card-link" href="" id="missionWeb0">Website</a><a class="card-link" href="" id="missionWiki0">Wiki</a><a class="card-link" href="" id="missionTwitter0">Twitter</a></small></div>
+          </div>
+          <div class="card bg-dark text-white"><img class="card-img-top" src="../img/Telstar_19V.png" alt="Telstar"/>
+            <div class="card-body">
+              <h5 class="card-title" id="missionName1"></h5><small class="text-muted" id="missionId1"></small>
+              <p class="card-text" id="missionDescr1"></p>
+            </div>
+            <div class="card-footer text-center"><small class="text-muted"><a class="card-link" href="" id="missionWeb1">Website</a><a class="card-link" href="" id="missionWiki1">Wiki</a><a class="card-link" href="" id="missionTwitter1">Twitter</a></small></div>
+          </div>
+          <div class="card bg-dark text-white"><img class="card-img-top" src="../img/Iridium_NEXT.png" alt="Iridium"/>
+            <div class="card-body">
+              <h5 class="card-title" id="missionName2"></h5><small class="text-muted" id="missionId2"></small>
+              <p class="card-text" id="missionDescr2"></p>
+            </div>
+            <div class="card-footer text-center"><small class="text-muted"><a class="card-link" href="" id="missionWeb2">Website</a><a class="card-link" href="" id="missionWiki2">Wiki</a><a class="card-link" href="" id="missionTwitter2">Twitter</a></small></div>
+          </div>
+        </div><br/>
+        <div class="card-deck">
+          <div class="card bg-dark text-white"><img class="card-img-top" src="../img/SpaceX_CRS-10.png" alt="CRS"/>
+            <div class="card-body">
+              <h5 class="card-title" id="missionName3"></h5><small class="text-muted" id="missionId3"></small>
+              <p class="card-text" id="missionDescr3"></p>
+            </div>
+            <div class="card-footer text-center"><small class="text-muted"><a class="card-link" href="" id="missionWeb3">Website</a><a class="card-link" href="" id="missionWiki3">Wiki</a><a class="card-link" href="" id="missionTwitter3">Twitter</a></small></div>
+          </div>
+          <div class="card bg-dark text-white"><img class="card-img-top" src="../img/SES.png" alt="SES"/>
+            <div class="card-body">
+              <h5 class="card-title" id="missionName4"></h5><small class="text-muted" id="missionId4"></small>
+              <p class="card-text" id="missionDescr4"></p>
+            </div>
+            <div class="card-footer text-center"><small class="text-muted"><a class="card-link" href="" id="missionWeb4">Website</a><a class="card-link" href="" id="missionWiki4">Wiki</a><a class="card-link" href="" id="missionTwitter4">Twitter</a></small></div>
+          </div>
+          <div class="card bg-dark text-white"><img class="card-img-top" src="../img/JCSAT-14_patch.png" alt="JSCAT"/>
+            <div class="card-body">
+              <h5 class="card-title" id="missionName5"></h5><small class="text-muted" id="missionId5"></small>
+              <p class="card-text" id="missionDescr5"></p>
+            </div>
+            <div class="card-footer text-center"><small class="text-muted"><a class="card-link" href="" id="missionWeb5">Website</a><a class="card-link" href="" id="missionWiki5">Wiki</a><a class="card-link" href="" id="missionTwitter5">Twitter</a></small></div>
+          </div>
+        </div><br/>
+        <div class="card-deck">
+          <div class="card bg-dark text-white"><img class="card-img-top" src="../img/AsiaSat_6.png" alt="AsiaSat"/>
+            <div class="card-body">
+              <h5 class="card-title" id="missionName6"></h5><small class="text-muted" id="missionId6"></small>
+              <p class="card-text" id="missionDescr6"></p>
+            </div>
+            <div class="card-footer text-center"><small class="text-muted"><a class="card-link" href="" id="missionWeb6">Website</a><a class="card-link" href="" id="missionWiki6">Wiki</a><a class="card-link" href="" id="missionTwitter6">Twitter</a></small></div>
+          </div>
+          <div class="card bg-dark text-white"><img class="card-img-top" src="../img/Orbcomm-2.png" alt="Orbcomm"/>
+            <div class="card-body">
+              <h5 class="card-title" id="missionName7"></h5><small class="text-muted" id="missionId7"></small>
+              <p class="card-text" id="missionDescr7"></p>
+            </div>
+            <div class="card-footer text-center"><small class="text-muted"><a class="card-link" href="" id="missionWeb7">Website</a><a class="card-link" href="" id="missionWiki7">Wiki</a><a class="card-link" href="" id="missionTwitter7">Twitter</a></small></div>
+          </div>
+          <div class="card bg-dark text-white"><img class="card-img-top" src="../img/ABS-2A.png" alt="ABS"/>
+            <div class="card-body">
+              <h5 class="card-title" id="missionName8"></h5><small class="text-muted" id="missionId8"></small>
+              <p class="card-text" id="missionDescr8"></p>
+            </div>
+            <div class="card-footertext-center"><small class="text-muted"><a class="card-link" href="" id="missionWeb8">Website</a><a class="card-link" href="" id="missionWiki8">Wiki</a><a class="card-link" href="" id="missionTwitter8">Twitter</a></small></div>
+          </div>
+        </div><br/>
+        <div class="card-deck">
+          <div class="card bg-dark text-white">
+            <div class="card-body">
+              <h5 class="card-title" id="missionName9"></h5><small class="text-muted" id="missionId9"></small>
+              <p class="card-text" id="missionDescr9"></p>
+            </div>
+            <div class="card-footer text-center"><small class="text-muted"><a class="card-link" href="" id="missionWeb9">Website</a><a class="card-link" href="" id="missionWiki9">Wiki</a><a class="card-link" href="" id="missionTwitter9">Twitter</a></small></div>
+          </div>
+        </div><br/>
+      </div>
+      <script src="../js/missions.js"></script>
+    </section>
+    <script src="../js/info.js"></script>
+    <script src="../js/crew.js"></script>
+    <script src="../js/mission.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
