--- a/html/mission-cards.html
+++ b/html/mission-cards.html
@@ -1,6 +1,82 @@
 
-<div class="container">
-  <div class="card"><img class="card-img-top" src="../img/Thaicom.png" alt="Thaicom"/>
-    <div class="card-body"></div>
-  </div>
+<div class="container"><br/>
+  <div class="card-deck">
+    <div class="card bg-dark text-white"><img class="card-img-top" src="../img/Thaicom.png" alt="Thaicom"/>
+      <div class="card-body">
+        <h5 class="card-title" id="missionName0"></h5><small class="text-muted" id="missionId0"></small>
+        <p class="card-text" id="missionDescr0"></p>
+      </div>
+      <div class="card-footer text-center"><small class="text-muted"><a class="card-link" href="" id="missionWeb0">Website</a><a class="card-link" href="" id="missionWiki0">Wiki</a><a class="card-link" href="" id="missionTwitter0">Twitter</a></small></div>
+    </div>
+    <div class="card bg-dark text-white"><img class="card-img-top" src="../img/Telstar_19V.png" alt="Telstar"/>
+      <div class="card-body">
+        <h5 class="card-title" id="missionName1"></h5><small class="text-muted" id="missionId1"></small>
+        <p class="card-text" id="missionDescr1"></p>
+      </div>
+      <div class="card-footer text-center"><small class="text-muted"><a class="card-link" href="" id="missionWeb1">Website</a><a class="card-link" href="" id="missionWiki1">Wiki</a><a class="card-link" href="" id="missionTwitter1">Twitter</a></small></div>
+    </div>
+    <div class="card bg-dark text-white"><img class="card-img-top" src="../img/Iridium_NEXT.png" alt="Iridium"/>
+      <div class="card-body">
+        <h5 class="card-title" id="missionName2"></h5><small class="text-muted" id="missionId2"></small>
+        <p class="card-text" id="missionDescr2"></p>
+      </div>
+      <div class="card-footer text-center"><small class="text-muted"><a class="card-link" href="" id="missionWeb2">Website</a><a class="card-link" href="" id="missionWiki2">Wiki</a><a class="card-link" href="" id="missionTwitter2">Twitter</a></small></div>
+    </div>
+  </div><br/>
+  <div class="card-deck">
+    <div class="card bg-dark text-white"><img class="card-img-top" src="../img/SpaceX_CRS-10.png" alt="CRS"/>
+      <div class="card-body">
+        <h5 class="card-title" id="missionName3"></h5><small class="text-muted" id="missionId3"></small>
+        <p class="card-text" id="missionDescr3"></p>
+      </div>
+      <div class="card-footer text-center"><small class="text-muted"><a class="card-link" href="" id="missionWeb3">Website</a><a class="card-link" href="" id="missionWiki3">Wiki</a><a class="card-link" href="" id="missionTwitter3">Twitter</a></small></div>
+    </div>
+    <div class="card bg-dark text-white"><img class="card-img-top" src="../img/SES.png" alt="SES"/>
+      <div class="card-body">
+        <h5 class="card-title" id="missionName4"></h5><small class="text-muted" id="missionId4"></small>
+        <p class="card-text" id="missionDescr4"></p>
+      </div>
+      <div class="card-footer text-center"><small class="text-muted"><a class="card-link" href="" id="missionWeb4">Website</a><a class="card-link" href="" id="missionWiki4">Wiki</a><a class="card-link" href="" id="missionTwitter4">Twitter</a></small></div>
+    </div>
+    <div class="card bg-dark text-white"><img class="card-img-top" src="../img/JCSAT-14_patch.png" alt="JSCAT"/>
+      <div class="card-body">
+        <h5 class="card-title" id="missionName5"></h5><small class="text-muted" id="missionId5"></small>
+        <p class="card-text" id="missionDescr5"></p>
+      </div>
+      <div class="card-footer text-center"><small class="text-muted"><a class="card-link" href="" id="missionWeb5">Website</a><a class="card-link" href="" id="missionWiki5">Wiki</a><a class="card-link" href="" id="missionTwitter5">Twitter</a></small></div>
+    </div>
+  </div><br/>
+  <div class="card-deck">
+    <div class="card bg-dark text-white"><img class="card-img-top" src="../img/AsiaSat_6.png" alt="AsiaSat"/>
+      <div class="card-body">
+        <h5 class="card-title" id="missionName6"></h5><small class="text-muted" id="missionId6"></small>
+        <p class="card-text" id="missionDescr6"></p>
+      </div>
+      <div class="card-footer text-center"><small class="text-muted"><a class="card-link" href="" id="missionWeb6">Website</a><a class="card-link" href="" id="missionWiki6">Wiki</a><a class="card-link" href="" id="missionTwitter6">Twitter</a></small></div>
+    </div>
+    <div class="card bg-dark text-white"><img class="card-img-top" src="../img/Orbcomm-2.png" alt="Orbcomm"/>
+      <div class="card-body">
+        <h5 class="card-title" id="missionName7"></h5><small class="text-muted" id="missionId7"></small>
+        <p class="card-text" id="missionDescr7"></p>
+      </div>
+      <div class="card-footer text-center"><small class="text-muted"><a class="card-link" href="" id="missionWeb7">Website</a><a class="card-link" href="" id="missionWiki7">Wiki</a><a class="card-link" href="" id="missionTwitter7">Twitter</a></small></div>
+    </div>
+    <div class="card bg-dark text-white"><img class="card-img-top" src="../img/ABS-2A.png" alt="ABS"/>
+      <div class="card-body">
+        <h5 class="card-title" id="missionName8"></h5><small class="text-muted" id="missionId8"></small>
+        <p class="card-text" id="missionDescr8"></p>
+      </div>
+      <div class="card-footertext-center"><small class="text-muted"><a class="card-link" href="" id="missionWeb8">Website</a><a class="card-link" href="" id="missionWiki8">Wiki</a><a class="card-link" href="" id="missionTwitter8">Twitter</a></small></div>
+    </div>
+  </div><br/>
+  <div class="card-deck">
+    <div class="card bg-dark text-white">
+      <div class="card-body">
+        <h5 class="card-title" id="missionName9"></h5><small class="text-muted" id="missionId9"></small>
+        <p class="card-text" id="missionDescr9"></p>
+      </div>
+      <div class="card-footer text-center"><small class="text-muted"><a class="card-link" href="" id="missionWeb9">Website</a><a class="card-link" href="" id="missionWiki9">Wiki</a><a class="card-link" href="" id="missionTwitter9">Twitter</a></small></div>
+    </div>
+  </div><br/>
 </div>
+<script src="../js/missions.js"></script>
